[metadata]
description-file = README.md

[aliases]
test = pytest

[coverage:run]
omit = 
	tests/*
	.tox/*
	.eggs/*

[coverage:report]
include = peerplays*
ignore_errors = True
show_missing = True

[flake8]
ignore = E501,F401
exclude = 
	.git,
	__pycache__,
	docs/conf.py,
	old,
	build,
	dist
max-complexity = 14

[egg_info]
tag_build = 
tag_date = 0

